--- a/.github/workflows/deploy_to_render.yml
+++ b/.github/workflows/deploy_to_render.yml
@@ -1,10 +1,10 @@
-name: Deploy Nomi App to Render
+name: Deploy Nomi to Render.com
 
 on:
   workflow_dispatch:
 
 jobs:
-  deploy-nomi-app:
+  deploy-nomi:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -18,9 +18,11 @@ jobs:
           NOMI_API_KEY: ${{ secrets.NOMI_API_KEY }}
         run: |
           set -e
-          response=$(curl -s -w "%{http_code}" -X GET \
-            -H "Authorization: Bearer $NOMI_API_KEY" \
-            "https://api.nomi.ai/nomis")
+          response=$(curl -s -w "%{http_code}" \
+            --request GET \
+            --header "Authorization: $NOMI_API_KEY" \
+            --header "Accept: application/json" \
+            --url "https://api.nomi.ai/v1/nomis")
           http_status="${response: -3}"
           response_body="${response::-3}"
           if [ "$http_status" -eq 400 ]; then
@@ -38,9 +40,11 @@ jobs:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
         run: |
           set -e
-          response=$(curl -s -w "%{http_code}" -X GET \
-            -H "Authorization: Bearer $RENDER_API_KEY" \
-            "https://api.render.com/v1/users")
+          response=$(curl -s -w "%{http_code}" \
+            --request GET \
+            --header "Authorization: Bearer $RENDER_API_KEY" \
+            --header "Accept: application/json" \
+            --url "https://api.render.com/v1/services?limit=1")
           http_status="${response: -3}"
           response_body="${response::-3}"
           if [ "$http_status" -eq 401 ]; then
@@ -60,9 +64,11 @@ jobs:
         run: |
           set -e  # Exit immediately if a command exits with a non-zero status
           # Make API call to Nomi AI
-          response=$(curl -s -w "%{http_code}" -X GET \
-            -H "Authorization: Bearer $NOMI_API_KEY" \
-            "https://api.nomi.ai/nomis/$NOMI_ID")
+          response=$(curl -s -w "%{http_code}" \
+            --request GET \
+            --header "Authorization: $NOMI_API_KEY" \
+            --header "Accept: application/json" \
+            --url "https://api.nomi.ai/v1/nomis/$NOMI_ID")
           # Extract HTTP status code
           http_status="${response: -3}"
           # Extract response body
@@ -97,26 +103,6 @@ jobs:
           echo "Normalized Nomi Name: $NOMI_NAME_NORMALIZED"
           echo "NOMI_NAME_NORMALIZED=$NOMI_NAME_NORMALIZED" >> $GITHUB_ENV
 
-          - name: Check for Existing Deployment
-          id: check-existing-deployment
-          env:
-            RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-            NOMI_NAME_NORMALIZED: ${{ env.NOMI_NAME_NORMALIZED }}
-          run: |
-            set -e
-            # Check for existing blueprint instance
-            BLUEPRINTS=$(curl -s -X GET \
-              -H "Authorization: Bearer $RENDER_API_KEY" \
-              "https://api.render.com/v1/blueprint-instances")
-            EXISTING_BLUEPRINT=$(echo "$BLUEPRINTS" | jq -r --arg NAME "$NOMI_NAME_NORMALIZED" '.[] | select(.name == $NAME)')
-            if [ -n "$EXISTING_BLUEPRINT" ]; then
-              echo "An existing deployment with the name $NOMI_NAME_NORMALIZED was found."
-              echo "::set-output name=EXISTING_DEPLOYMENT::true"
-            else
-              echo "No existing deployment found."
-              echo "::set-output name=EXISTING_DEPLOYMENT::false"
-            fi
-
       - name: Check for Existing Deployment
         id: check-existing-deployment
         env:
@@ -125,9 +111,11 @@ jobs:
         run: |
           set -e
           # Check for existing blueprint instance
-          BLUEPRINTS=$(curl -s -X GET \
-            -H "Authorization: Bearer $RENDER_API_KEY" \
-            "https://api.render.com/v1/blueprint-instances")
+          BLUEPRINTS=$(curl -s \
+            --request GET \
+            --header "Authorization: Bearer $RENDER_API_KEY" \
+            --header "Accept: application/json" \
+            --url "https://api.render.com/v1/blueprint-instances")
           EXISTING_BLUEPRINT=$(echo "$BLUEPRINTS" | jq -r --arg NAME "$NOMI_NAME_NORMALIZED" '.[] | select(.name == $NAME)')
           if [ -n "$EXISTING_BLUEPRINT" ]; then
             echo "An existing deployment with the name $NOMI_NAME_NORMALIZED was found."
@@ -135,7 +123,8 @@ jobs:
           else
             echo "No existing deployment found."
             echo "::set-output name=EXISTING_DEPLOYMENT::false"
-          fi            
+          fi
+      
   
       - name: Get Last Workflow Run
         id: get-last-run
@@ -148,8 +137,10 @@ jobs:
         run: |
           set -e
           # Get the workflow runs for this workflow and branch
-          RESPONSE=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
-            "https://api.github.com/repos/${{ github.repository }}/actions/workflows/${{ github.workflow }}/runs?branch=${{ github.ref_name }}&status=completed&per_page=5")
+          RESPONSE=$(curl -s \
+            --request GET \
+            --header "Authorization: Bearer $GITHUB_TOKEN" \
+            --url "https://api.github.com/repos/${{ github.repository }}/actions/workflows/${{ github.workflow }}/runs?branch=${{ github.ref_name }}&status=completed&per_page=5")
           # Parse the runs and find the last run before the current one
           LAST_RUN_TIME=""
           RUNS=$(echo "$RESPONSE" | jq -c '.workflow_runs[]')
@@ -194,7 +185,7 @@ jobs:
           NOMI_ID: ${{ secrets.NOMI_ID }}
           NOMI_API_KEY: ${{ secrets.NOMI_API_KEY }}
           OTHER_API_KEYS: ${{ secrets.OTHER_API_KEYS }}
-          REPO_URL: https://github.com/${{ github.repository }}
+          REPO_URL: "https://github.com/${{ github.repository }}"
           BRANCH_NAME: ${{ github.ref_name }}
         run: |
           set -e
@@ -230,18 +221,20 @@ jobs:
           if [ "${{ steps.check-existing-deployment.outputs.EXISTING_DEPLOYMENT }}" == "true" ]; then
             # Update existing blueprint
             BLUEPRINT_ID=$(echo "$EXISTING_BLUEPRINT" | jq -r '.id')
-            RESPONSE=$(curl -s -w "%{http_code}" -X PUT \
-              -H "Authorization: Bearer $RENDER_API_KEY" \
-              -H "Content-Type: application/json" \
-              -d '{"blueprint": "'"$ENCODED_BLUEPRINT"'", "name": "'"${NOMI_NAME_NORMALIZED}"'"}' \
-              "https://api.render.com/v1/blueprint-instances/$BLUEPRINT_ID")
+            RESPONSE=$(curl -s -w "%{http_code}" \
+              --request PATCH \
+              --header "Authorization: Bearer $RENDER_API_KEY" \
+              --header "Content-Type: application/json" \
+              --data '{"blueprint": "'"$ENCODED_BLUEPRINT"'", "name": "'"${NOMI_NAME_NORMALIZED}"'"}' \
+              --url "https://api.render.com/v1/blueprint-instances/$BLUEPRINT_ID")
           else
             # Create new blueprint
-            RESPONSE=$(curl -s -w "%{http_code}" -X POST \
-              -H "Authorization: Bearer $RENDER_API_KEY" \
-              -H "Content-Type: application/json" \
-              -d '{"blueprint": "'"$ENCODED_BLUEPRINT"'", "name": "'"${NOMI_NAME_NORMALIZED}"'"}' \
-              "https://api.render.com/v1/blueprint-instances")
+            RESPONSE=$(curl -s -w "%{http_code}" \
+              --request PATCH \
+              --header "Authorization: Bearer $RENDER_API_KEY" \
+              --header "Content-Type: application/json" \
+              --data '{"blueprint": "'"$ENCODED_BLUEPRINT"'", "name": "'"${NOMI_NAME_NORMALIZED}"'"}' \
+              --url "https://api.render.com/v1/blueprint-instances/$BLUEPRINT_ID")
           fi
           http_status="${RESPONSE: -3}"
           response_body="${RESPONSE::-3}"
