--- a/render.yaml
+++ b/render.yaml
@@ -15,6 +15,8 @@ services:
     dockerfilePath: ./Dockerfile
     dockerCommand: ./main.py
     healthCheckPath: /
+    envVars:
+      - fromGroup: nomi-discord-python
 
 envVarGroups:
 - name: nomi-discord-python
