--- a/.github/workflows/deploy_to_render.yml
+++ b/.github/workflows/deploy_to_render.yml
@@ -177,7 +177,8 @@ jobs:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
           ENV_GROUP_ID: ${{ steps.check-existing-env-group.outputs.EXISTING_GROUP_ID }}
         run: |
-          set -e
+          # set -e
+          set -x          
       
           # Retrieve the existing env group
           RESPONSE=$(curl -s \
