--- a/.github/workflows/deploy_to_render.yml
+++ b/.github/workflows/deploy_to_render.yml
@@ -176,6 +176,10 @@ jobs:
         env:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
           ENV_GROUP_ID: ${{ steps.check-existing-env-group.outputs.EXISTING_GROUP_ID }}
+
+          # Map environment variable keys to secrets
+          NOMI_API_KEY: ${{ secrets.NOMI_API_KEY }}
+          DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
         run: |
           # set -e
           set -x          
@@ -195,9 +199,9 @@ jobs:
           MISSING_SECRETS=()
       
           # Iterate over each env var key
+          VALUE="${!KEY}"
           for KEY in $ENV_VARS; do
             # Get the value from the environment variable (set from secrets)
-            VALUE=$(printenv "$KEY")
             if [ -z "$VALUE" ]; then
               echo "Error: No secret found for environment variable $KEY."
               MISSING_SECRETS+=("$KEY")
