--- a/setup/nomi.conf
+++ b/setup/nomi.conf
@@ -4,7 +4,7 @@
 # you do not share this file with ANYONE
 
 # Populate these with your Nomi and Discord API Tokens.
-DISCORD_API_TOKEN=
+DICSORD_API_KEY=
 NOMI_API_KEY=
 
 # You may need to put quotes around your Nomi's name
