--- a/.github/workflows/deploy_to_render.yml
+++ b/.github/workflows/deploy_to_render.yml
@@ -8,8 +8,8 @@ on:
     inputs:
       environment:
         description: 'The Name of your Nomi'
-        required: false
-        default: 'Giselle'
+        required: true
+        default: ''
 
 jobs:
   deploy-nomi:
